# blackhole-macos

./: .gitignore  CMakeLists.txt  README.md  blackhole.glsl  blackhole_presets.txt
assets/: Info.plist  blackhole-macos.icns
shaders/: blackhole.hlsl  frag_desktop_header.glsl  frag_header.glsl  frag_simple.glsl  fullscreen_vs.hlsl  vert.glsl
src/: capture_dxgi.cpp  capture_dxgi.h  capture_wgc.cpp  capture_wgc.h  d3d11_renderer.cpp  d3d11_renderer.h  gl_texture.cpp  gl_texture.h  gui_config.cpp  gui_config.h  macos_main.mm  main.cpp  renderer_interface.h  texture_source.h  win32_gl.cpp  win32_gl.h  win32_window.cpp  win32_window.h
